src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ecfdf5;
  --foreground: #0f172a;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
} */

body {
  background: var(--background);
  color: var(--foreground);
  /* font-family: Arial, Helvetica, sans-serif; */
  font-family: var(--font-geist-sans), ui-sans-serif, system-ui;
}

